--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "lodash": "^4.17.11",
